--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.4",
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.3.2",
     "gatsby": "^3.11.1",
     "gatsby-plugin-feed": "^3.11.0",
@@ -25,6 +27,7 @@
     "gatsby-plugin-postcss": "^4.12.0",
     "gatsby-plugin-react-helmet": "^4.11.0",
     "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "^4.8.0",
     "gatsby-remark-images": "^5.8.0",
     "gatsby-remark-prismjs": "^5.8.0",
