--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "supergeografi",
   "private": true,
   "description": "A starter for a blog powered by Gatsby and Markdown",
   "version": "0.1.0",
@@ -8,45 +8,46 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "@headlessui/react": "^1.4.0",
-    "@heroicons/react": "^1.0.4",
-    "@tailwindcss/forms": "^0.3.3",
-    "@tailwindcss/typography": "^0.4.1",
-    "autoprefixer": "^10.3.2",
-    "gatsby": "^3.11.1",
-    "gatsby-plugin-feed": "^3.11.0",
-    "gatsby-plugin-gatsby-cloud": "^2.11.0",
-    "gatsby-plugin-google-analytics": "^3.11.0",
-    "gatsby-plugin-image": "^1.11.0",
-    "gatsby-plugin-manifest": "^3.11.0",
-    "gatsby-plugin-offline": "^4.11.0",
-    "gatsby-plugin-postcss": "^4.12.0",
-    "gatsby-plugin-react-helmet": "^4.11.0",
-    "gatsby-plugin-sharp": "^3.11.0",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.5",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.2",
+    "autoprefixer": "^10.4.2",
+    "gatsby": "^4.8.1",
+    "gatsby-plugin-feed": "4.0.0",
+    "gatsby-plugin-google-analytics": "^4.2.0",
+    "gatsby-plugin-image": "^2.8.1",
+    "gatsby-plugin-manifest": "^4.8.1",
+    "gatsby-plugin-netlify": "^4.1.0",
+    "gatsby-plugin-netlify-cms": "^6.8.0",
+    "gatsby-plugin-offline": "^5.8.1",
+    "gatsby-plugin-postcss": "^5.8.0",
+    "gatsby-plugin-react-helmet": "^5.8.0",
+    "gatsby-plugin-sharp": "^4.8.1",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-copy-linked-files": "^4.8.0",
-    "gatsby-remark-images": "^5.8.0",
-    "gatsby-remark-prismjs": "^5.8.0",
-    "gatsby-remark-responsive-iframe": "^4.8.0",
-    "gatsby-remark-smartypants": "^4.8.0",
-    "gatsby-source-filesystem": "^3.11.0",
-    "gatsby-transformer-remark": "^4.8.0",
-    "gatsby-transformer-sharp": "^3.11.0",
-    "postcss": "^8.3.6",
-    "prismjs": "^1.24.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "gatsby-remark-copy-linked-files": "^5.8.0",
+    "gatsby-remark-images": "^6.8.1",
+    "gatsby-remark-prismjs": "^6.8.0",
+    "gatsby-remark-responsive-iframe": "^5.8.0",
+    "gatsby-remark-smartypants": "^5.8.0",
+    "gatsby-source-filesystem": "^4.8.1",
+    "gatsby-transformer-remark": "^5.8.1",
+    "gatsby-transformer-sharp": "^4.8.0",
+    "postcss": "^8.4.7",
+    "prismjs": "^1.27.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "tailwindcss": "^2.2.7",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75"
+    "tailwindcss": "^3.0.23",
+    "typeface-merriweather": "1.1.13",
+    "typeface-montserrat": "1.1.13"
   },
   "devDependencies": {
-    "prettier": "2.3.2"
+    "prettier": "2.5.1"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
