--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^8.0.0",
     "tailwindcss": "^3.0.23",
     "typeface-merriweather": "1.1.13",
     "typeface-montserrat": "1.1.13"
