--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -50,6 +50,7 @@ collections:
           widget: image,
           required: false,
         }
+      - {label: "Description", name: "description", widget: "string", required: false}
       - label: 'Meta'
         required: false
         name: 'meta'
