--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -70,6 +70,7 @@ collections:
               required: false,
             }
           - { label: Noindex, name: noindex, widget: boolean, required: false }
+
   - name: postTags
     label: Post Tags
     editor:
@@ -106,3 +107,15 @@ collections:
               required: false,
             }
           - { label: Noindex, name: noindex, widget: boolean, required: false }
+
+  - name: "page" # Used in routes, e.g., /admin/collections/blog
+    label: "Page" # Used in the UI
+    folder: "content/page" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Type", name: "contentType", widget: "hidden", default: "page"}
+      - {label: "Template", name: "template", widget: "string", default: "DefaultPage"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "URL Slug", name: "slug", widget: "string", required: false}
+      - {label: "Body", name: "body", widget: "markdown"}
