--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^4.8.1",
     "gatsby-plugin-feed": "4.0.0",
     "gatsby-plugin-google-analytics": "^4.2.0",
+    "gatsby-plugin-google-gtag": "^4.9.0",
     "gatsby-plugin-image": "^2.8.1",
     "gatsby-plugin-manifest": "^4.8.1",
     "gatsby-plugin-netlify": "^4.1.0",
