--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-offline": "^5.8.1",
     "gatsby-plugin-postcss": "^5.8.0",
     "gatsby-plugin-react-helmet": "^5.8.0",
+    "gatsby-plugin-robots-txt": "^1.7.0",
     "gatsby-plugin-sharp": "^4.8.1",
     "gatsby-plugin-sitemap": "^5.9.0",
     "gatsby-plugin-slug": "^2.0.0",
