--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
+    "@styled-icons/fa-solid": "^10.34.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
+    "algoliasearch": "^4.12.2",
     "autoprefixer": "^10.4.2",
     "gatsby": "^4.8.1",
+    "gatsby-plugin-algolia": "^0.26.0",
     "gatsby-plugin-feed": "4.0.0",
     "gatsby-plugin-google-analytics": "^4.2.0",
     "gatsby-plugin-google-gtag": "^4.9.0",
@@ -32,6 +35,7 @@
     "gatsby-plugin-sharp": "^4.8.1",
     "gatsby-plugin-sitemap": "^5.9.0",
     "gatsby-plugin-slug": "^2.0.0",
+    "gatsby-plugin-styled-components": "^5.9.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "^5.8.0",
     "gatsby-remark-images": "^6.8.1",
@@ -46,7 +50,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-instantsearch-dom": "^6.22.0",
     "react-markdown": "^8.0.0",
+    "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.23",
     "typeface-merriweather": "1.1.13",
     "typeface-montserrat": "1.1.13"
