--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "gatsby-source-filesystem": "^4.8.1",
     "gatsby-transformer-remark": "^5.8.1",
     "gatsby-transformer-sharp": "^4.8.0",
+    "netlify-cms-app": "^2.15.68",
+    "netlify-cms-media-library-cloudinary": "^1.3.10",
     "postcss": "^8.4.7",
     "prismjs": "^1.27.0",
     "react": "^17.0.2",
