--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,6 +4,11 @@ backend:
 publish_mode: editorial_workflow
 media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
+media_library: 
+  name: cloudinary
+  config: 
+    cloud_name: supergeografi
+    api_key: 671999412332542
 
 local_backend: true
 
