--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gatsby-remark-prismjs": "^6.8.0",
     "gatsby-remark-responsive-iframe": "^5.8.0",
     "gatsby-remark-smartypants": "^5.8.0",
+    "gatsby-source-contentful": "^7.7.2",
     "gatsby-source-filesystem": "^4.8.1",
     "gatsby-transformer-remark": "^5.8.1",
     "gatsby-transformer-sharp": "^4.8.0",
