--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "^5.8.0",
     "gatsby-remark-images": "^6.8.1",
+    "gatsby-remark-images-contentful": "^5.9.0",
     "gatsby-remark-prismjs": "^6.8.0",
     "gatsby-remark-responsive-iframe": "^5.8.0",
     "gatsby-remark-smartypants": "^5.8.0",
