--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "prismjs": "^1.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
     "react-helmet": "^6.1.0",
     "react-instantsearch-dom": "^6.22.0",
     "react-markdown": "^8.0.0",
+    "react-share": "^4.4.0",
     "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.23",
     "typeface-merriweather": "1.1.13",
