--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-plugin-slug": "^2.0.0",
     "gatsby-plugin-styled-components": "^5.9.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-remark-autolink-headers": "^5.9.0",
     "gatsby-remark-copy-linked-files": "^5.8.0",
     "gatsby-remark-images": "^6.8.1",
     "gatsby-remark-images-contentful": "^5.9.0",
