--- a/package.json
+++ b/package.json
@@ -8,63 +8,65 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-brands-svg-icons": "^6.0.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
-    "@headlessui/react": "^1.5.0",
-    "@heroicons/react": "^1.0.5",
-    "@styled-icons/fa-solid": "^10.34.0",
-    "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.2",
-    "algoliasearch": "^4.12.2",
-    "autoprefixer": "^10.4.2",
-    "gatsby": "^4.8.1",
-    "gatsby-plugin-algolia": "^0.26.0",
-    "gatsby-plugin-feed": "4.0.0",
-    "gatsby-plugin-google-analytics": "^4.2.0",
-    "gatsby-plugin-google-gtag": "^4.9.0",
-    "gatsby-plugin-image": "^2.8.1",
-    "gatsby-plugin-manifest": "^4.8.1",
-    "gatsby-plugin-netlify": "^4.1.0",
-    "gatsby-plugin-offline": "^5.8.1",
-    "gatsby-plugin-postcss": "^5.8.0",
-    "gatsby-plugin-react-helmet": "^5.8.0",
-    "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sharp": "^4.8.1",
-    "gatsby-plugin-sitemap": "^5.9.0",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@gatsbyjs/reach-router": "^2.0.1",
+    "@headlessui/react": "^1.7.11",
+    "@heroicons/react": "^2.0.16",
+    "@styled-icons/fa-solid": "^10.47.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "algoliasearch": "^4.14.3",
+    "autoprefixer": "^10.4.13",
+    "gatsby": "^5.6.1",
+    "gatsby-link": "^5.6.0",
+    "gatsby-plugin-algolia": "^1.0.3",
+    "gatsby-plugin-feed": "^5.6.0",
+    "gatsby-plugin-google-analytics": "^5.6.0",
+    "gatsby-plugin-google-gtag": "^5.6.0",
+    "gatsby-plugin-image": "^3.6.0",
+    "gatsby-plugin-manifest": "^5.6.0",
+    "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-plugin-offline": "^6.6.0",
+    "gatsby-plugin-postcss": "^6.6.0",
+    "gatsby-plugin-react-helmet": "^6.6.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sharp": "^5.6.0",
+    "gatsby-plugin-sitemap": "^6.6.0",
     "gatsby-plugin-slug": "^2.0.0",
-    "gatsby-plugin-styled-components": "^5.9.0",
+    "gatsby-plugin-styled-components": "^6.6.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-autolink-headers": "^5.9.0",
-    "gatsby-remark-copy-linked-files": "^5.8.0",
-    "gatsby-remark-images": "^6.8.1",
-    "gatsby-remark-images-contentful": "^5.9.0",
-    "gatsby-remark-prismjs": "^6.8.0",
-    "gatsby-remark-responsive-iframe": "^5.8.0",
-    "gatsby-remark-smartypants": "^5.8.0",
-    "gatsby-source-contentful": "^7.7.2",
-    "gatsby-source-filesystem": "^4.8.1",
-    "gatsby-transformer-remark": "^5.8.1",
-    "gatsby-transformer-sharp": "^4.8.0",
-    "netlify-cms-app": "^2.15.68",
-    "netlify-cms-media-library-cloudinary": "^1.3.10",
-    "postcss": "^8.4.7",
-    "prismjs": "^1.27.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-feather": "^2.0.9",
+    "gatsby-react-router-scroll": "^6.6.0",
+    "gatsby-remark-autolink-headers": "^6.6.0",
+    "gatsby-remark-copy-linked-files": "^6.6.0",
+    "gatsby-remark-images": "^7.6.0",
+    "gatsby-remark-images-contentful": "^6.6.0",
+    "gatsby-remark-prismjs": "^7.6.0",
+    "gatsby-remark-responsive-iframe": "^6.6.0",
+    "gatsby-remark-smartypants": "^6.6.0",
+    "gatsby-script": "^2.6.0",
+    "gatsby-source-contentful": "^8.6.1",
+    "gatsby-source-filesystem": "^5.6.0",
+    "gatsby-transformer-remark": "^6.6.0",
+    "gatsby-transformer-sharp": "^5.6.0",
+    "postcss": "^8.4.21",
+    "prismjs": "^1.29.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-helmet": "^6.1.0",
-    "react-instantsearch-dom": "^6.22.0",
-    "react-markdown": "^8.0.0",
-    "react-share": "^4.4.0",
-    "styled-components": "^5.3.3",
-    "tailwindcss": "^3.0.23",
+    "react-instantsearch-dom": "^6.39.0",
+    "react-markdown": "^8.0.5",
+    "react-share": "^4.4.1",
+    "styled-components": "^5.3.6",
+    "tailwindcss": "^3.2.7",
     "typeface-merriweather": "1.1.13",
     "typeface-montserrat": "1.1.13"
   },
   "devDependencies": {
-    "prettier": "2.5.1"
+    "prettier": "2.8.4"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
